--- a/application/modules/default/views/scripts/partials/header/template_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/template_react.phtml
@@ -151,9 +151,15 @@ $tabs_left += $cat_title_length*10;
               </ul>
             </div>
         <?php } ?>
-
+        <?php
+            $storeUrl = $last_char_store_order=='1'?$sname:$baseurl.'/s/'.$store_name;
+            if (strpos($storeUrl, 'http') === false) {
+                // It starts not with 'http'
+                $storeUrl = 'https://' . $storeUrl;
+            }
+        ?>
         <figure class="logo-header">
-          <a href="http://<?php echo $last_char_store_order=='1'?$sname:$baseurl.'/s/'.$store_name ?>">
+          <a href="http://<?php echo $storeUrl ?>">
             <img width="<?= $this->template['header-logo']['width'] ?>" border="0"
                  src="<?= $this->template['header-logo']['image-src'] ?>">
           </a>
