--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -786,3 +786,7 @@ body {
     }
   }
 }
+
+@media (max-width: 600px) {
+  #metaheader #metaheader-nav ul.metaheader-menu#user-menu {margin-right: 0;}
+}
