--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -197,16 +197,15 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
             <section class="wrapper">
 
                     <section>
-
-                        <figure class="logo-header">
-                            <?php
-                                $storeUrl = $last_char_store_order=='1'?$sname:$baseurl.'/s/'.$store_name;
-                                if (strpos($storeUrl, 'http') === false) {
-                                    // It starts not with 'http'
-                                    $storeUrl = 'https://' . $storeUrl;
-                                }
-                            ?>
-                           <a href="<?php echo $storeUrl ?>">
+                        <?php 
+                            $storeUrl = $last_char_store_order=='1'?$sname:$baseurl.'/s/'.$store_name;
+                            if (strpos($storeUrl, 'http') === false) {
+                                // It starts not with 'http'
+                                $storeUrl = 'https://' . $storeUrl;
+                            }
+                        ?>
+                        <figure class="logo-header">                           
+                           <a href="http://<?php echo $storeUrl ?>">
                                 <img width="<?= $this->template['header-logo']['width'] ?>" border="0"
                                      src="<?= $this->template['header-logo']['image-src'] ?>">
                             </a>
