--- a/application/modules/default/views/scripts/partials/header/template_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/template_react.phtml
@@ -150,17 +150,16 @@ $tabs_left += $cat_title_length*10;
                   </li>
               </ul>
             </div>
-        <?php } ?>
-
+        <?php } ?> 
+        <?php
+            $storeUrl = $last_char_store_order=='1'?$sname:$baseurl.'/s/'.$store_name;
+            if (strpos($storeUrl, 'http') === false) {
+                // It starts not with 'http'
+                $storeUrl = 'https://' . $storeUrl;
+            }
+        ?>
         <figure class="logo-header">
-            <?php
-                $storeUrl = $last_char_store_order=='1'?$sname:$baseurl.'/s/'.$store_name;
-                if (strpos($storeUrl, 'http') === false) {
-                    // It starts not with 'http'
-                    $storeUrl = 'https://' . $storeUrl;
-                }
-            ?>
-          <a href="<?php echo $storeUrl ?>">
+          <a href="http://<?php echo $storeUrl ?>">
             <img width="<?= $this->template['header-logo']['width'] ?>" border="0"
                  src="<?= $this->template['header-logo']['image-src'] ?>">
           </a>
