--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -205,7 +205,7 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
                             }
                         ?>
                         <figure class="logo-header">                           
-                           <a href="http://<?php echo $storeUrl ?>">
+                           <a href="<?php echo $storeUrl ?>">
                                 <img width="<?= $this->template['header-logo']['width'] ?>" border="0"
                                      src="<?= $this->template['header-logo']['image-src'] ?>">
                             </a>
