--- a/application/modules/default/views/scripts/partials/header/template_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/template_react.phtml
@@ -159,7 +159,7 @@ $tabs_left += $cat_title_length*10;
             }
         ?>
         <figure class="logo-header">
-          <a href="http://<?php echo $storeUrl ?>">
+          <a href="<?php echo $storeUrl ?>">
             <img width="<?= $this->template['header-logo']['width'] ?>" border="0"
                  src="<?= $this->template['header-logo']['image-src'] ?>">
           </a>
