--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -733,6 +733,12 @@ body {
           padding: 20px;
           text-align: center;
           margin-bottom: 10px;
+
+          img {
+            margin: 0 auto;
+            clear: both;
+            display: block;
+          }
         }
 
         #panel-menu {
@@ -785,8 +791,4 @@ body {
       }
     }
   }
-}
-
-@media (max-width: 600px) {
-  #metaheader #metaheader-nav ul.metaheader-menu#user-menu {margin-right: 0;}
 }
