--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -292,7 +292,7 @@ $xdgTypeJson = Zend_Json::encode($helperCatXdgType->catXdgType($this->product->p
                                 </div>
                                 <div id="product-header-info-container">
 
-                                    <div>
+                                    <div id="product-header-title">
                                     <?php if (false === empty($this->product->link_1)): ?><a
                                         href="<?php echo $this->product->link_1; ?>"
                                         target="_NEW"
