--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -1,5 +1,7 @@
 out: ../css/product-page.css, sourcemap: true, compress: true
-
+#product-main {
+  margin-top: 40px;  
+}
 #product-page-view {
   #product-title-div {
     #product-header-info-container {
@@ -29,6 +31,7 @@ out: ../css/product-page.css, sourcemap: true, compress: true
           }
 
           #product-header-info-container {
+            margin: 0;
             #product-header-title {
               height: 85px;
             }
