--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -1,6 +1,6 @@
 out: ../css/product-page.css, sourcemap: true, compress: true
 #product-main {
-  margin-top: 40px;  
+  margin-top: 40px;
 }
 #product-page-view {
   #product-title-div {
@@ -51,8 +51,6 @@ out: ../css/product-page.css, sourcemap: true, compress: true
             width: 100%;
             padding-bottom: 10px;
             border-bottom: 1px solid #fafafa;
-            margin-bottom: 20px;
-
 
             .projectdtailHeart {
               margin: 0 auto;
@@ -78,9 +76,14 @@ out: ../css/product-page.css, sourcemap: true, compress: true
         #carouselContainer {
           width: 100%;
           float: left;
+          padding: 0;
 
           .carousel-indicators {
             bottom: -40px;
+          }
+
+          .carousel-inner {
+            margin-top: 20px;
           }
         }
       }
