--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -102,6 +102,14 @@ out: ../css/product-page.css, sourcemap: true, compress: true
 
           &#about-panel #product-about {
             padding: 0;
+
+            #product-discussion {
+              .page-header {
+                .pagination {
+                  display: none;
+                }
+              }
+            }
           }
         }
       }
