--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -105,8 +105,12 @@ out: ../css/product-page.css, sourcemap: true, compress: true
 
             #product-discussion {
               .page-header {
+                margin: 40px 0 40px;
                 .pagination {
-                  display: none;
+                  position: absolute;
+                  width: auto;
+                  right: 0;
+                  bottom: -35px;
                 }
               }
             }
