--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -113,6 +113,9 @@ out: ../css/product-page.css, sourcemap: true, compress: true
                   bottom: -35px;
                 }
               }
+              .comments-list {
+                margin-bottom: 10px;
+              }
             }
           }
         }
