--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -56,6 +56,8 @@ out: ../css/product-page.css, sourcemap: true, compress: true
               margin: 0 auto;
               width: 45px;
               float: none;
+              margin-bottom: 20px;
+
               .container-pling {
                 width: 45px;
               }
@@ -68,6 +70,10 @@ out: ../css/product-page.css, sourcemap: true, compress: true
                 width: 100% !important;
                 padding: 0;
                 margin: 10px 0;
+
+                .rating {
+                  margin-top: -10px;
+                }
               }
             }
           }
@@ -120,6 +126,13 @@ out: ../css/product-page.css, sourcemap: true, compress: true
           }
         }
       }
+    }
+  }
+  .modal.in {
+    .modal-dialog {
+      width: 90%;
+      margin-left: 5%;
+      margin-right: 5%;
     }
   }
 }
