--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -103,10 +103,7 @@ out: ../css/product-page.css, sourcemap: true, compress: true
           padding: 0;
           margin-bottom: 20px;
           .pling-nav-tabs ul.nav-tabs>li>a{font-size: 12px;}
-          .productRating-row {
-            float: left;
-            width: 100%;
-          }
+
         }
       }
       #product-panels {
@@ -117,6 +114,19 @@ out: ../css/product-page.css, sourcemap: true, compress: true
           #ratings-panel {
             #ratings-panel-wrapper {
               padding: 0;
+
+              .bbtn {
+                clear: both;
+                width: 100%;
+                float: left;
+                margin: 0;
+              }
+
+              .productRating-row {
+                float: left;
+                width: 100%;
+                margin-top: 10px;
+              }
             }
           }
 
