--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -54,12 +54,24 @@ out: ../css/product-page.css, sourcemap: true, compress: true
 
             .projectdtailHeart {
               margin: 0 auto;
-              width: 45px;
+              width: 180px;
               float: none;
               margin-bottom: 20px;
+              height: 168px;
 
               .container-pling {
-                width: 45px;
+                width: 180px;
+                height: 165px;
+
+                .plingheart {
+                  font-size: 180px;
+                }
+
+                .plingtext-heartnumber {
+                  top: -120px;
+                  font-size: 50px;
+                }
+
               }
             }
             .projectdetailRating {
