--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -112,7 +112,7 @@ out: ../css/product-page.css, sourcemap: true, compress: true
         margin-bottom: 40px;
         .tab-pane {
           padding: 0;
-          #ratings-panel {
+          &#ratings-panel {
             #ratings-panel-wrapper {
               padding: 0;
 
