--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -157,6 +157,13 @@ out: ../css/product-page.css, sourcemap: true, compress: true
       width: 90%;
       margin-left: 5%;
       margin-right: 5%;
+      .modal-header {
+        .close {
+          top: 10px;
+          position: absolute;
+          right: 15px;          
+        }
+      }
     }
   }
 }
