--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -136,6 +136,14 @@ out: ../css/product-page.css, sourcemap: true, compress: true
             #product-discussion {
               .page-header {
                 margin: 40px 0 60px;
+                height: 120px;
+
+                button.small {
+                  background: white;
+                  border: 1px solid #2673b0;
+                  padding: 6px 12px;
+                }
+
                 .pagination {
                   position: absolute;
                   width: auto;
@@ -161,7 +169,7 @@ out: ../css/product-page.css, sourcemap: true, compress: true
         .close {
           top: 10px;
           position: absolute;
-          right: 15px;          
+          right: 15px;
         }
       }
     }
