--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -54,12 +54,27 @@ out: ../css/product-page.css, sourcemap: true, compress: true
 
             .projectdtailHeart {
               margin: 0 auto;
-              width: 45px;
+              width: 180px !important;
               float: none;
               margin-bottom: 20px;
+              height: 168px !important;
 
               .container-pling {
-                width: 45px;
+                width: 180px;
+
+                .partialbuttonfollowproject {
+                  text-align: center;
+                  width: 180px;
+                  height: 165px;
+
+                  i {
+                    font-size: 180px;
+                  }
+                  .heartnumber {
+                    top: -140px;
+                    font-size: 70px;
+                  }
+                }
               }
             }
             .projectdetailRating {
