--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -70,8 +70,8 @@ out: ../css/product-page.css, sourcemap: true, compress: true
                   i {
                     font-size: 180px;
                   }
-                  
-                  .heartnumber {
+
+                  > div {
                     top: -140px;
                     font-size: 70px;
                   }
