--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -61,6 +61,14 @@ out: ../css/product-page.css, sourcemap: true, compress: true
 
               .container-pling {
                 width: 180px;
+                position: relative;
+
+                span.glyphicon {
+                  position: absolute;
+                  top: 40px;
+                  left: 50px;
+                  margin-left: 10px;
+                }
 
                 .partialbuttonfollowproject {
                   text-align: center;
