--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -65,9 +65,9 @@ out: ../css/product-page.css, sourcemap: true, compress: true
 
                 span.glyphicon {
                   position: absolute;
-                  top: 40px;
-                  left: 50px;
-                  margin-left: 10px;
+                  top: 50px;
+                  left: 50%;
+                  margin-left: -10px;
                 }
 
                 .partialbuttonfollowproject {
