--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -67,7 +67,8 @@ out: ../css/product-page.css, sourcemap: true, compress: true
                   position: absolute;
                   top: 50px;
                   left: 50%;
-                  margin-left: -10px;
+                  margin-left: 5px;
+                  margin-top: 10px;
                 }
 
                 .partialbuttonfollowproject {
