--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -148,6 +148,10 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
                 $urlExplore = $helpExploreUrl->buildExploreUrl(null, null, $selectedOrder);
                 return "<li class='navilink parent'><span class='title'><a class='parent' href='{$urlExplore}' data-id='0'><span class='cat-title'>All</span></a></span></li>";
             }
+            
+            
+            $jsonTree = json_encode($this->categories);
+            
 
             $selectedOrder = isset($this->filters['order']) ? $this->filters['order'] : null;
             echo build_tree($this->categories, $selectedOrder, true);
@@ -156,6 +160,9 @@ $this->navColorActive = $this->template['header-nav-tabs']['link']['color'];
     </div>
 </div>
 <script type="application/javascript">
+    var catTree = <?= $jsonTree ?>;
+    var catSelected = <?= $this->cat_id ?>;
+    
     $(document).ready(function(){
         var hierarchy = (function () {
             return {
